--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,3 +38,79 @@ body {
   padding: 1em;
   cursor: pointer;
 }
+
+.prod-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1em;
+  padding: .5em;
+  width: 325px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+.card img {
+  width: 75%;
+  max-height: 245px;
+  object-fit: scale-down;
+}
+
+.card__body {
+  align-self: flex-start;
+  max-height: 250px;
+  padding: .5em;
+}
+
+.card__body h3 {
+  margin: .5em;
+  font-size: 1.5rem;
+}
+
+.card__body-desc {
+  font-size: .8rem;
+  min-height: 135px;
+}
+
+.item-count {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.item-count__qty {
+  text-decoration: none;
+  border: none;
+  background-color: #ffff;
+  cursor: pointer;
+}
+
+.item-count__btn {
+  text-decoration: none;
+  padding: .5em;
+  background-color: #37392E;
+  border-radius: 6px;
+  color: #d0cddb;
+  border: 2px solid #37392E;
+  cursor: pointer;
+}
+
+.item-count__input {
+  text-align: center;
+  max-width: max-content;
+}
+
+.item-count input[type=number] {
+  border-bottom: none !important;
+}
