--- a/src/css/_card.scss
+++ b/src/css/_card.scss
@@ -1,13 +1,12 @@
 $border-radius: 5px;
 .prod-container {
-    // width: 100%;
+    width: 100%;
+    display: flex;
+        justify-content: space-around;
     // display: flex;
     //     flex-wrap: wrap;
-    //     justify-content: space-around;
-    display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-items: center;
+    //     flex-direction: column;
+    //     align-items: center;
 }
 
 .card {
