--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,10 +40,9 @@ body {
 }
 
 .prod-container {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
 }
 
 .card {
