--- a/src/css/_card.scss
+++ b/src/css/_card.scss
@@ -2,7 +2,8 @@ $border-radius: 5px;
 .prod-container {
     width: 100%;
     display: flex;
-        justify-content: space-around;
+        justify-content: center;
+        align-items: center;
     // display: flex;
     //     flex-wrap: wrap;
     //     flex-direction: column;
