--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,8 +56,15 @@ body {
   width: 325px;
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 20px rgba(184, 168, 168, 0.2);
   overflow: hidden;
+}
+
+.card a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .card img {
@@ -119,4 +126,18 @@ body {
 
 .item-count input[type=number] {
   border-bottom: none !important;
+}
+
+.item-detail-container {
+  margin: 1em;
+}
+
+.item-detail-container img {
+  width: 50%;
+  max-height: 245px;
+  object-fit: scale-down;
+}
+
+.item-header {
+  display: flex;
 }
