--- a/src/css/_card.scss
+++ b/src/css/_card.scss
@@ -2,8 +2,10 @@ $border-radius: 5px;
 .prod-container {
     width: 100%;
     display: flex;
-        justify-content: center;
+        flex-wrap: wrap;
+        justify-content: space-around;
         align-items: center;
+    margin-top: 1em;
 }
 
 .card {
@@ -13,7 +15,9 @@ $border-radius: 5px;
         align-items: center;
     margin: 1em;
     padding: .5em;
-    width: 325px;
+    min-width: 250px;
+    width: 250px;
+    min-height: 350px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 20px rgba(184, 168, 168, 0.2);
@@ -28,23 +32,18 @@ $border-radius: 5px;
 
     img {
         width: 50%;
-        max-height: 245px;
+        max-height: 170px;
         object-fit: scale-down;
     }
 
     &__body {
         align-self: flex-start;
-        max-height: 250px;
+        min-height: 100px;
         padding: .5em;
 
         h3 {
             margin: .5em 0;
-            font-size: 1.5rem;
-        }
-
-        &-desc {
-            font-size: .8rem;
-            min-height: 135px;
+            font-size: 1.3rem;
         }
     }
 }
