--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -1,25 +1,43 @@
 @import 'maps';
 
-.nb {
-    display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        flex-flow: row wrap;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: .5em 1em;
-    background-color: color(primary);
-    color: color(secondary);
-    line-height: 0;
+nav {
+    padding: 0 1em;
+    background-color: color(primary) !important;
+    color: color(secondary) !important;
+}
 
-    &-logo {
-        font-size: 1.4rem;
-        font-weight: 700;
-    }
+.nb-link {
+    padding: 0 5em !important;
 
-    li {
-        padding: 1em;
-        cursor: pointer;
+    @media only screen and (min-width: 992px) {
+        padding: 0 3em !important;
     }
+}
+
+.nb-logo {
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+.dropdown-content {
+    min-width: 150px !important;
+
+    li a {
+        font-size: .9rem !important;
+    }
+}
+
+.material-icons {
+    margin-left: 0 !important;
+}
+
+.sidenav {
+    max-width: 270px;
+}
+
+.progress {
+    margin: 0 !important;
+}
+
+.row .col {
+    padding: 0 !important; 
 }
