--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,18 +15,20 @@ body {
   min-width: 100%;
 }
 
-.nb {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  flex-flow: row wrap;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: .5em 1em;
-  background-color: #37392E;
-  color: #d0cddb;
-  line-height: 0;
+nav {
+  padding: 0 1em;
+  background-color: #37392E !important;
+  color: #d0cddb !important;
+}
+
+.nb-link {
+  padding: 0 5em !important;
+}
+
+@media only screen and (min-width: 992px) {
+  .nb-link {
+    padding: 0 3em !important;
+  }
 }
 
 .nb-logo {
@@ -34,16 +36,37 @@ body {
   font-weight: 700;
 }
 
-.nb li {
-  padding: 1em;
-  cursor: pointer;
+.dropdown-content {
+  min-width: 150px !important;
+}
+
+.dropdown-content li a {
+  font-size: .9rem !important;
+}
+
+.material-icons {
+  margin-left: 0 !important;
+}
+
+.sidenav {
+  max-width: 270px;
+}
+
+.progress {
+  margin: 0 !important;
+}
+
+.row .col {
+  padding: 0 !important;
 }
 
 .prod-container {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
+  margin-top: 1em;
 }
 
 .card {
@@ -53,7 +76,9 @@ body {
   align-items: center;
   margin: 1em;
   padding: .5em;
-  width: 325px;
+  min-width: 250px;
+  width: 250px;
+  min-height: 350px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 20px rgba(184, 168, 168, 0.2);
@@ -69,24 +94,19 @@ body {
 
 .card img {
   width: 50%;
-  max-height: 245px;
+  max-height: 170px;
   object-fit: scale-down;
 }
 
 .card__body {
   align-self: flex-start;
-  max-height: 250px;
+  min-height: 100px;
   padding: .5em;
 }
 
 .card__body h3 {
   margin: .5em 0;
-  font-size: 1.5rem;
-}
-
-.card__body-desc {
-  font-size: .8rem;
-  min-height: 135px;
+  font-size: 1.3rem;
 }
 
 .item-count {
@@ -97,6 +117,8 @@ body {
 }
 
 .item-count__qty {
+  margin: .7em;
+  font-size: 1rem;
   text-decoration: none;
   border: none;
   background-color: #ffff;
@@ -122,10 +144,7 @@ body {
 .item-count__input {
   text-align: center;
   max-width: max-content;
-}
-
-.item-count input[type=number] {
-  border-bottom: none !important;
+  border: none;
 }
 
 .item-detail-container {
@@ -140,4 +159,8 @@ body {
 
 .item-header {
   display: flex;
+}
+
+.containerCategory {
+  margin: 1em;
 }
