improving the first delivery of the final project

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -162,5 +162,10 @@ nav {
 }
 
 .containerCategory {
-  margin: 1em;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 1em;
 }
