--- a/src/css/_categories.scss
+++ b/src/css/_categories.scss
@@ -1,3 +1,8 @@
 .containerCategory {
-    margin: 1em;
+    width: 100%;
+    display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+    margin-top: 1em;
 }
