--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,8 +112,6 @@ nav {
 .item-count {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .item-count__qty {
@@ -159,6 +157,19 @@ nav {
 
 .item-header {
   display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.btn-cta {
+  text-decoration: none;
+  padding: .5em;
+  margin-top: 1em;
+  background-color: #37392E;
+  border-radius: 6px;
+  color: #d0cddb;
+  border: 2px solid #37392E;
+  cursor: pointer;
 }
 
 .containerCategory {
