--- a/src/css/_cart.scss
+++ b/src/css/_cart.scss
@@ -47,6 +47,19 @@
     }
 }
 
-.cart-removeItem {
+.cart-remove-item {
     cursor: pointer;
+}
+
+.btn-empty-cart {
+    display: block;
+            width: 20%;
+            text-decoration: none;
+            padding: .5em;
+            margin-top: 1em;
+            background-color: color(primary);
+            border-radius: 6px;
+            color: color(secondary);
+            border: 2px solid color(primary);
+            cursor: pointer;
 }
