--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -7,10 +7,10 @@ nav {
 }
 
 .nb-link {
-    padding: 0 5em !important;
+    padding: 0 .5em !important;
     display: flex;
     @media only screen and (min-width: 992px) {
-        padding: 0 1em !important;
+        padding: 0 1.5em !important;
     }
 }
 
@@ -18,6 +18,7 @@ nav {
     font-size: 1.4rem;
     font-weight: 700;
 }
+
 .dropdown-content {
     min-width: 150px !important;
 
