--- a/src/css/_itemdetail.scss
+++ b/src/css/_itemdetail.scss
@@ -1,17 +1,43 @@
 .item-detail-container {
     margin: 1em;
+    padding: .5em;
+    border-radius: 10px;
+    box-shadow: 0 2px 20px rgba(184, 168, 168, 0.2);
 
-    img {
-        width: 50%;
-        max-height: 245px;
-        object-fit: scale-down;
+    @media only screen and (min-width: 768px) {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 700px;
     }
 }
 
 .item-header {
     display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap ;
+        flex-direction: column;
+    margin: 1em 0;
+
+        h4 {
+            font-size: 2rem;
+        }
+
+        img {  
+            align-self: center;
+            width: 50%;
+            max-height: 200px;
+            object-fit: scale-down;
+        }
+
+        p {
+            font-size: 1.4rem;
+            font-weight: 500;
+        }
+
+    @media only screen and (min-width: 768px) {
+        display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+        min-height: 250px;
+    }
 }
 
 .btn-cta {
