--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,8 +2,9 @@
 @import 'typhography';
 @import 'navbar';
 @import 'maps';
-@import 'card';
+@import 'item';
 @import 'itemcount';
 @import 'itemdetail';
 @import 'cart';
 @import 'checkout';
+@import 'notfound';
