--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,12 +62,14 @@ nav {
 }
 
 .prod-container {
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card {
@@ -93,9 +95,16 @@ nav {
   align-items: center;
 }
 
-.card img {
-  width: 50%;
-  max-height: 170px;
+.card__header {
+  min-height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card__header img {
+  width: 60%;
+  max-height: 200px;
   object-fit: scale-down;
 }
 
@@ -103,11 +112,18 @@ nav {
   align-self: flex-start;
   min-height: 100px;
   padding: .5em;
+  color: #37392E;
 }
 
 .card__body h3 {
   margin: .5em 0;
   font-size: 1.3rem;
+  min-height: 40px;
+}
+
+.card__body p {
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .item-count {
@@ -131,7 +147,7 @@ nav {
   border-radius: 6px;
   color: #d0cddb;
   border: 2px solid #37392E;
-  cursor: pointer;
+  width: 250px;
 }
 
 .item-count__btn:disabled, .item-count__btn [disabled] {
@@ -148,18 +164,48 @@ nav {
 
 .item-detail-container {
   margin: 1em;
+  padding: .5em;
+  border-radius: 10px;
+  box-shadow: 0 2px 20px rgba(184, 168, 168, 0.2);
 }
 
-.item-detail-container img {
-  width: 50%;
-  max-height: 245px;
-  object-fit: scale-down;
+@media only screen and (min-width: 768px) {
+  .item-detail-container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
+  }
 }
 
 .item-header {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  flex-direction: column;
+  margin: 1em 0;
+}
+
+.item-header h4 {
+  font-size: 2rem;
+}
+
+.item-header img {
+  align-self: center;
+  width: 50%;
+  max-height: 200px;
+  object-fit: scale-down;
+}
+
+.item-header p {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+@media only screen and (min-width: 768px) {
+  .item-header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    min-height: 250px;
+  }
 }
 
 .btn-cta {
@@ -240,4 +286,20 @@ nav {
 
 .checkout-container {
   margin: 1em;
+}
+
+.notFound {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0;
+}
+
+.notFound p {
+  margin: 1em 0;
+}
+
+.notFound button {
+  background-color: #37392E;
 }
