--- a/src/css/_cart.scss
+++ b/src/css/_cart.scss
@@ -4,32 +4,48 @@
 
 .cart-container {
     width: 100%;
-    display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+
+    @media only screen and (min-width: 768px) {
+        display: grid;
+            grid-template-columns: 1fr 1fr;
+    }
 
     &__item {
-        border-top: 1px solid #eee;
-        grid-column: 1 / 2;
         display: grid;
-            grid-gap: 1rem;
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-            justify-items: center;
-            align-items: center;
-        min-height: 100px;
+            grid-gap: .5rem;
+            grid-template-columns: minmax(0, 100px) minmax(min-content, 230px) minmax(min-content, 100px)  minmax(0, 80px) minmax(0, 30px);
+            justify-items: start;
+        margin: 1em 0;
+        min-height: 4.5rem;
+        border-top: 1px solid #eee;
 
-        img {
-            width: 5em;
-            max-width: 15em;
+            img {
+                place-self: center;
+                max-width: 4rem;
+                max-height: 4rem;
+            }
+            
+            p, i {
+                align-self: center;
+            }
+
+        @media only screen and (min-width: 768px) {
+            grid-column: 1 / 2;
+            display: grid;
+                grid-gap: .5rem;
+                grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+                justify-items: center;
+                align-items: center;
+            min-height: 130px;
+            margin: 0;
         }
-    }
+    } 
 
     &__price {
         grid-column: 2 / 3;
         grid-row: 1 / 3 ;
-
-        margin: 0 3em;
-        padding: 1em 3em;
+        margin: 0 2em;
+        padding: 1em 2em;
         background-color: #f5f5f7;
 
         button {
@@ -43,6 +59,11 @@
             color: color(secondary);
             border: 2px solid color(primary);
             cursor: pointer;
+        }
+
+        p {
+            font-size: 1.5rem;
+            font-weight: 500;
         }
     }
 }
