--- a/src/css/style.css
+++ b/src/css/style.css
@@ -225,32 +225,53 @@ nav {
 
 .cart-container {
   width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
+}
+
+@media only screen and (min-width: 768px) {
+  .cart-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .cart-container__item {
-  border-top: 1px solid #eee;
-  grid-column: 1 / 2;
   display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  justify-items: center;
-  align-items: center;
-  min-height: 100px;
+  grid-gap: .5rem;
+  grid-template-columns: minmax(0, 100px) minmax(min-content, 230px) minmax(min-content, 100px) minmax(0, 80px) minmax(0, 30px);
+  justify-items: start;
+  margin: 1em 0;
+  min-height: 4.5rem;
+  border-top: 1px solid #eee;
 }
 
 .cart-container__item img {
-  width: 5em;
-  max-width: 15em;
+  place-self: center;
+  max-width: 4rem;
+  max-height: 4rem;
+}
+
+.cart-container__item p, .cart-container__item i {
+  align-self: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .cart-container__item {
+    grid-column: 1 / 2;
+    display: grid;
+    grid-gap: .5rem;
+    grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+    justify-items: center;
+    align-items: center;
+    min-height: 130px;
+    margin: 0;
+  }
 }
 
 .cart-container__price {
   grid-column: 2 / 3;
   grid-row: 1 / 3;
-  margin: 0 3em;
-  padding: 1em 3em;
+  margin: 0 2em;
+  padding: 1em 2em;
   background-color: #f5f5f7;
 }
 
@@ -265,6 +286,11 @@ nav {
   color: #d0cddb;
   border: 2px solid #37392E;
   cursor: pointer;
+}
+
+.cart-container__price p {
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 .cart-remove-item {
@@ -286,6 +312,51 @@ nav {
 
 .checkout-container {
   margin: 1em;
+}
+
+.checkout-container__item {
+  display: grid;
+  grid-gap: .5rem;
+  grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 1fr) minmax(0, 45px);
+  justify-items: start;
+  align-items: center;
+  margin: 0 auto;
+  padding: 1em 0;
+  min-height: 4rem;
+  border-top: 1px solid #eee;
+}
+
+@media only screen and (min-width: 768px) {
+  .checkout-container__item {
+    max-width: 80%;
+  }
+}
+
+.total-price {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.cart-item {
+  justify-self: start;
+}
+
+.email-validation {
+  color: red;
+}
+
+.modal-trigger {
+  margin-top: 1em;
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  padding: .5em;
+  margin-top: 1em;
+  background-color: #37392E !important;
+  border-radius: 6px;
+  color: #d0cddb;
+  border: 2px solid #37392E !important;
+  cursor: pointer;
 }
 
 .notFound {
